@@ -1,3 +1,8 @@
+Fri Oct 29 19:11:07 BST 2004 (njh)
+----------------------------------
+  * clamav-milter:	Fix problem with deleting X-VIRUS-STATUS not setting
+				correct libmilter settings
+
 Fri Oct 29 02:19:48 CEST 2004 (tk)
 ----------------------------------
   * clamdscan: update manual page and fix return code for "unknown option"
